# pig

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  lao.toml.example  pig-worker-apple-silicon.toml.example  pig.toml.example
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  package.yml  release.yml
cli/: Cargo.toml  README.md  coordinator_commands.rs  main.rs  model_commands.rs  profiles.rs  worker_lifecycle.rs
cli/src/: macos_ui_integration.rs  main.rs
cli/workflows/: test_audio_todo.yaml  test_markdown_summary.yaml  test_multimodal.yaml  test_rust_refactor.yaml  test_smart_doc.yaml  test_video_transcription.yaml
core/: Cargo.toml  apple_silicon.rs  artifact.rs  core_scheduler.rs  cross_platform.rs  lib.rs  local_llm.rs  macos_integrations.rs  mps_shaders.rs  path_policy.rs  plugin_manager.rs  plugin_result.rs  plugins.rs  power_management.rs  scheduler.rs  state_manager.rs  step_executor.rs  trust.rs  unified_memory.rs  workflow_dag.rs  workflow_exec.rs  workflow_executor.rs  workflow_helpers.rs  workflow_parallel.rs  workflow_state.rs  workflow_types.rs  workflow_v2.rs
core/code_intelligence/: cache.rs  codebase_memory_cli.rs  error.rs  mod.rs  operations.rs  provider.rs
core/execution/: artifact.rs  descriptor.rs  legacy_adapter.rs  mod.rs  result.rs
core/model/: benchmark.rs  invoker.rs  metrics.rs  mod.rs  registry.rs  scheduler.rs  types.rs
core/prompt_dispatcher/prompt/: prompt_library.json  prompt_library.md  system_prompt.txt
core/tests/: code_intelligence_provider_test.rs  comprehensive_lao.rs  e2e_loops_multimodal_test.rs  features_test.rs  ffi_fuzz_test.rs  integration_test.rs  local_llm_workflow_test.rs  prompt_validation.rs  property_tests.rs  vtable_layout.rs  workflow_execution_tests.rs  workflow_v2_test.rs
core/tests/fixtures/: fake_codebase_memory_mcp.rs
docs/: APPLE_SILICON.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING.md  MULTIMODAL.md  MULTIMODAL_GUIDE.md  PARALLEL_EXECUTION.md  PRIMARY_AND_DEPENDENCY.md  PROMPT_GENERATION_AUDIT.md  QUICK_START.md  SILICON_IMPROVEMENTS.md  architecture.md  cli.md  conditional_workflows.md  control-plane.md  local-inference.md  openai-compatibility.md  plugin-api.md  workflows.md
docs/adr/: 0001-production-trust-model.md  0002-unified-executor.md  0003-plugin-api-compatibility.md  0004-persistent-manual-scheduling.md  0005-out-of-process-plugin-host.md
lao_inference/: Cargo.toml
lao_inference/src/: config.rs  device.rs  lib.rs  sampling.rs  tokenizer.rs
lao_plugin_api/: Cargo.toml
lao_plugin_api/src/: lib.rs
plugins/: libcuda_inference_plugin.dylib  libecho_plugin.dylib  libllama_cpp_plugin.dylib
plugins/ANEInferencePlugin/: Cargo.toml
plugins/ANEInferencePlugin/src/: lib.rs
plugins/CudaInferencePlugin/: Cargo.toml
plugins/CudaInferencePlugin/src/: lib.rs
plugins/EchoPlugin/: Cargo.toml  plugin.bak
plugins/EchoPlugin/src/: lib.rs
plugins/FileReadPlugin/: Cargo.toml  plugin.yaml
plugins/FileReadPlugin/src/: lib.rs
plugins/FolderMapPlugin/: Cargo.toml  plugin.yaml
plugins/FolderMapPlugin/src/: lib.rs
plugins/GGUFPlugin/: Cargo.toml  README.md
plugins/GGUFPlugin/src/: lib.rs
plugins/JsonExtractPlugin/: Cargo.toml  plugin.yaml
plugins/JsonExtractPlugin/src/: lib.rs
plugins/LlamaCppPlugin/: Cargo.toml  README.md
plugins/LlamaCppPlugin/src/: lib.rs
plugins/MarkdownReportPlugin/: Cargo.toml  plugin.yaml
plugins/MarkdownReportPlugin/src/: lib.rs
plugins/MultimodalPlugin/: Cargo.toml
plugins/MultimodalPlugin/src/: lib.rs
plugins/PromptDispatcherPlugin/: Cargo.toml
plugins/PromptDispatcherPlugin/src/: lib.rs
plugins/RegexExtractPlugin/: Cargo.toml  plugin.yaml
plugins/RegexExtractPlugin/src/: lib.rs
plugins/ShellCommandPlugin/: Cargo.toml  plugin.yaml
plugins/ShellCommandPlugin/src/: lib.rs
plugins/SummarizerPlugin/: Cargo.toml  README.md
plugins/SummarizerPlugin/src/: lib.rs
plugins/VLLMPlugin/: Cargo.toml
plugins/VLLMPlugin/src/: lib.rs
plugins/WhisperPlugin/: Cargo.toml  README.md
plugins/WhisperPlugin/src/: lib.rs
scripts/: build-apple-silicon.sh  build-plugins.sh
ui/lao-ui/: Cargo.toml
ui/lao-ui/src/: app.rs  backend.rs  file_upload.rs  lib.rs  macos_integration.rs  main.rs  metrics.rs  multimodal.rs  timeline.rs  undo.rs
ui/lao-ui/src/components/: graph.rs  inspector.rs  logs.rs  mod.rs  settings.rs  toolbar.rs
ui/lao-ui/tests/: README.md  backend_tests.rs  component_tests.rs  integration_tests.rs  layout_tests.rs  workflow_execution_tests.rs
worker/: Cargo.toml  config.rs  coordinator.rs  coordinator_server.rs  defer_drop.rs  hardware.rs  job.rs  lib.rs  server.rs  state.rs
worker/backend/: fake.rs  llama_cpp.rs  mlx.rs  mod.rs
worker/tests/: coordinator_integration_test.rs  http_server_test.rs  llama_cpp_fixture_test.rs
worker/tests/fixtures/: fake_llama_server.rs
workflows/: audio_transcription.yaml  fan_in_pattern.yaml  fan_out_pattern.yaml  generated_from_prompt.yaml  image_analysis.yaml  image_batch_processing.yaml  local_llm_example.yaml  mixed_media_processing.yaml  multimodal_analysis.yaml  multimodal_pipeline.yaml  multimodal_processing.yaml  parallel_data_processing.yaml  parallel_fan_out.yaml  simple_chain.yaml  test.yaml  test_basic.yaml  test_chain.yaml  test_condition.yaml  test_loop.yaml  test_markdown_with_content.yaml  test_parallel.yaml  v2_chain.yaml  v2_condition.yaml  v2_fan_out.yaml  v2_loop.yaml  video_to_images.yaml  workflow_generation.yaml
