[package]
name = "lao-orchestrator-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and code intelligence for LAO"
authors.workspace = true

[lib]
name = "lao_orchestrator_core"
path = "lib.rs"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
