[package]
name = "pig-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for pig — Private Inference Gateway"
authors.workspace = true

[lib]
name = "pig_core"
path = "lib.rs"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1.2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
