[package]
name = "lao_plugin_api"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "API for LAO plugins"
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "lao_plugin_api"
crate-type = ["lib"] 