[package]
name = "lao-worker"
version.workspace = true
description = "Long-running LAO worker: HTTP protocol, job queue, and model backend supervision"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "lao_worker"
path = "lib.rs"

[dependencies]
lao-orchestrator-core = { path = "../core" }
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "process", "io-util", "sync", "signal", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
