[package]
name = "pig-worker"
version.workspace = true
description = "pig worker: HTTP API, job queue, and llama.cpp supervision"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pig_worker"
path = "lib.rs"

# Test-only fixture: a fake llama-server executable used by
# llama_cpp_fixture_test.rs to exercise LlamaCppBackend against a real child process
# without depending on a real llama.cpp install or GGUF model.
[[bin]]
name = "fake_llama_server"
path = "tests/fixtures/fake_llama_server.rs"
test = false
doc = false

[dependencies]
pig-core = { path = "../core" }
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "process", "io-util", "sync", "signal", "fs"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
toml = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
