[package]
name = "cuda_inference_plugin"
version = "0.1.0"
edition = "2021"
description = "Direct CUDA kernel chains for LLM inference pipelines"
authors = ["Jake Abendroth <contact@jakea.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
half = "2.4"
bytemuck = { version = "1.14", features = ["derive"] }

# CUDA bindings for Rust
cudarc = { version = "0.12", features = ["cuda-12050"] }

# Optional: For more complex tensor operations
ndarray = "0.16"

[features]
default = ["cuda"]
cuda = []

[build-dependencies]
cc = "1.0"
