[package]
name = "folder_map_plugin"
version = "0.1.20"
edition = "2021"
description = "Recursively lists files under a directory as a newline-separated map"
authors = ["Jake Abendroth <contact@jakea.net>"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }

[lib]
crate-type = ["cdylib"]
