[package]
name = "folder_map_plugin"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Recursively lists files under a directory as a newline-separated map"
authors.workspace = true

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }

[lib]
crate-type = ["cdylib"]
