[package]
name = "gguf_plugin"
version = "0.2.0"
edition = "2021"
description = "Native GGUF model loading with Candle ML framework"
authors = ["Jake Abendroth <contact@jakea.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"

# Candle ML framework for native Rust inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"

# Memory-mapped file support for efficient model loading
memmap2 = "0.9"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]

# Optimized defaults for Apple Silicon
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.features]
default = ["metal", "accelerate"]
