[package]
name = "json_extract_plugin"
version.workspace = true
edition.workspace = true
description = "Extracts a value from a JSON document using a dotted path selector"
authors.workspace = true

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
