[package]
name = "llama_cpp_plugin"
version = "0.1.0"
edition = "2021"
description = "Direct llama.cpp inference without HTTP overhead"
authors = ["Jake Abendroth <contact@jakea.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
llama-cpp-2 = "0.1"
once_cell = "1.19"
rand = "0.8"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]
metal = ["llama-cpp-2/metal"]
