[package]
name = "markdown_report_plugin"
version = "0.1.20"
edition = "2021"
description = "Formats text into a Markdown report, optionally writing it to disk"
authors = ["Jake Abendroth <contact@jakea.net>"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
