[package]
name = "markdown_report_plugin"
version.workspace = true
edition.workspace = true
description = "Formats text into a Markdown report, optionally writing it to disk"
authors.workspace = true

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde_json = "1"

[lib]
crate-type = ["cdylib"]
