[package]
name = "prompt_dispatcher_plugin"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Generates a workflow plan from a prompt using a local LLM (Ollama)"
authors.workspace = true

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"] 