[package]
name = "shell_command_plugin"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Runs a trusted shell command and returns its stdout"
authors.workspace = true

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }

[lib]
crate-type = ["cdylib"]
