[package]
name = "summarizer_plugin"
version.workspace = true
edition.workspace = true
description = "Summarizes input text using a local LLM"
authors.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] } 