[package]
name = "vllm_plugin"
version = "0.1.0"
edition = "2021"
description = "High-throughput LLM inference via vLLM with PagedAttention"
authors = ["Jake Abendroth <contact@jakea.net>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
lao_plugin_api = { path = "../../lao_plugin_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"

# HTTP client for vLLM OpenAI-compatible API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# Async runtime for the plugin
futures = "0.3"

[features]
default = []
