[package]
name = "lao-ui"
version = "0.1.20"
edition = "2021"
description = "Native Rust UI for LAO Orchestrator"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.29", features = ["default", "image"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
lao-orchestrator-core = { path = "../../core" }
lao_plugin_api = { path = "../../lao_plugin_api" }
tokio = { version = "1", features = ["full"] }
rfd = "0.15"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "lao_ui"
path = "src/lib.rs"

[[bin]]
name = "lao-ui"
path = "src/main.rs"

[dev-dependencies]
serial_test = "2.0" 
